# cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/chasqui/: __init__.py  add_channel.py  cli.py  envfiles.py  epilogue.py  fetch.py  module_gen.py  preflight.py  provision.py  rename.py  scaffold.py  secrets_gen.py  stack.py  wizard.py
tests/: conftest.py  test_add_channel.py  test_channels.py  test_envfiles.py  test_module_gen.py  test_new_command.py  test_providers.py  test_rename.py
