[project]
name = "chasqui"
version = "0.2.1"
description = "Chasqui stack generator — `uvx chasqui new <name>`: zero to a running AI chat agent in one command"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "William Wong Garay", email = "willywg@gmail.com" }]
requires-python = ">=3.11"
keywords = ["whatsapp", "ai-agent", "langgraph", "scaffold", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.15",
    "questionary>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/chasqui-stack/chasqui"
Repository = "https://github.com/chasqui-stack/cli"

[project.scripts]
chasqui = "chasqui.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chasqui"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
